Update book launch page

--- a/book-launch.html
+++ b/book-launch.html
@@ -89,13 +89,13 @@ function divReplacebook1(){
   
 <section id="announcement">
   <div class="py-3">
-    <h2 class="display-5 section-title text-center">LAUNCH OF ARDUINO BOOKS!</h2>
+    <h4 class="display-5 section-title text-center">FLOSS Arduino books launch<br> By <br>  Prof. Anil Shasrabuddhe</h4>
   </div>
 
   <center>
     <div class="tab">
-      <button class="tablinks btn btn-lg btn-outline-success" onclick="divReplacebook1(event, 'Book1')" style="color: black">Book I</button>
-      <button class="tablinks btn btn-lg btn-outline-info" onclick="divReplacebook2(event, 'Book2')" id="defaultOpen" style="color: black">Book II</button>
+      <button class="tablinks btn btn-lg btn-outline-success text-center" onclick="divReplacebook1(event, 'Book1')" style="color: black">Microcontroller Programming with<br>Arduino, Scilab and Xcos</button>&nbsp; &nbsp; &nbsp; &nbsp; 
+      <button class="tablinks btn btn-lg btn-outline-info text-center" onclick="divReplacebook2(event, 'Book2')" style="color: black">Microcontroller Programming with<br>Arduino and Python</button>
     </div>
   </center>
 
