Update book launch pages

--- a/book-launch.html
+++ b/book-launch.html
@@ -54,7 +54,7 @@ function divReplacebook1(){
          $('#winners').show();
        
       },
-      5000
+      10000
    );
    }
    function divReplacebook2(){
@@ -79,7 +79,7 @@ function divReplacebook1(){
          $('#consolation').show();
        
       },
-      3500
+      10000
    );
  }
  
@@ -103,7 +103,7 @@ function divReplacebook1(){
   <center>
     <div id="Book1" class="tabcontent">
       <div id="Div-B" style="display:none;">
-        <img id="myImage" src="image/winner.gif" class="img-fluid">
+        <img id="myImage" src="image/arduino-scilab.png" class="img-fluid">
       </div>
     </div>
   </center>
@@ -112,7 +112,7 @@ function divReplacebook1(){
   <center>
     <div id="Book2" class="tabcontent">
       <div id="consolation-congratulations" style="display:none;">
-        <img id="myImage" src="image/Consolation.gif" class="img-fluid">
+        <img id="myImage" src="image/arduino-python.png" class="img-fluid">
       </div>
     </div>
   </center>
