Update book launch pages

--- a/book-launch.html
+++ b/book-launch.html
@@ -89,7 +89,7 @@ function divReplacebook1(){
   
 <section id="announcement">
   <div class="py-3">
-    <h4 class="display-5 section-title text-center">FLOSS Arduino books launch<br> By <br>  Prof. Anil Shasrabuddhe</h4>
+    <h4 class="display-5 section-title text-center">FLOSS Arduino books launch<br> By <br> Prof. Anil D Sahasrabudhe</h4>
   </div>
 
   <center>
