Update book launch pages

--- a/book-launch.html
+++ b/book-launch.html
@@ -41,6 +41,7 @@ function myFunction1() {
   } else {
     x.style.display = "none";
   }
+  document.getElementById("myDIV2").style.display ='none'
 }
 
 function myFunction2() {
@@ -50,6 +51,7 @@ function myFunction2() {
   } else {
     x.style.display = "none";
   }
+  document.getElementById("myDIV1").style.display ='none'
 }
 
 </script>
@@ -71,11 +73,11 @@ function myFunction2() {
   <br>
   <center>
     <div id="myDIV1" class="tabcontent"  style="display:none;">
-        <img id="myImage" src="image/arduino-scilab.png" class="img-fluid">
+        <img id="myImage" src="image/arduino-scilab.png" class="img-fluid image-borderd">
     </div>
   </center>
 
-  <br>
+  
   <center>
     <div id="myDIV2" class="tabcontent" style="display:none;">
         <img id="myImage" src="image/arduino-python.png" class="img-fluid">
