Update book launch pages

--- a/book-launch.html
+++ b/book-launch.html
@@ -60,26 +60,26 @@ function myFunction2() {
   
 <section id="announcement">
   <div class="py-3">
-    <h4 class="display-5 section-title text-center">FLOSS Arduino books launch<br> By <br> Prof. Anil D Sahasrabudhe</h4>
+    <h4 class="display-5 section-title text-center">FLOSS Arduino books launch<br> by <br></h4><h2 class="display-5 text-center"><strong><span style="color: red">  Prof. Anil D Sahasrabudhe</span></strong></h2>
   </div>
 
   <center>
     <div class="tab">
-      <button class="tablinks btn btn-lg btn-outline-success text-center" onclick="myFunction1(event, 'Book1')" style="color: black">Microcontroller Programming with<br>Arduino, Scilab and Xcos</button>&nbsp; &nbsp; &nbsp; &nbsp; 
+      <button class="tablinks btn btn-lg btn-outline-success text-center" onclick="myFunction1(event, 'Book1')" style="color: black">Microcontroller Programming with<br>Arduino, Scilab, and Xcos</button>&nbsp; &nbsp; &nbsp; &nbsp; 
       <button class="tablinks btn btn-lg btn-outline-info text-center" onclick="myFunction2(event, 'Book2')" style="color: black">Microcontroller Programming with<br>Arduino and Python</button>
     </div>
   </center>
 
   <br>
   <center>
-    <div id="myDIV1" class="tabcontent"  style="display:none;">
-        <img id="myImage" src="image/arduino-scilab.png" class="img-fluid image-borderd">
+    <div id="myDIV1" class="tabcontent"  style="display:none; filter: drop-shadow(0px 5px 13px black);">
+        <img id="myImage" src="image/arduino-scilab.png" class="img-fluid">
     </div>
   </center>
 
   
   <center>
-    <div id="myDIV2" class="tabcontent" style="display:none;">
+    <div id="myDIV2" class="tabcontent" style="display:none; filter: drop-shadow(0px 5px 13px black);">
         <img id="myImage" src="image/arduino-python.png" class="img-fluid">
     </div>
   </center><br>
